--- a/src/index.css
+++ b/src/index.css
@@ -445,6 +445,10 @@ textarea {
   padding: 0.2em 0;
 }
 
+body {
+  font-family: "Spoqa Han Sans Neo", sans-serif;
+}
+
 a {
   color: inherit;
   text-decoration: none;
